add xword project

--- a/index.html
+++ b/index.html
@@ -1,2 +1,5 @@
 <h1>Hi! I'm Nikita</h1>
 <p>Head on over to <a href="projects.html">Projects</a></p>
+<ol>
+  <li><a href="x-word.gamolsky.net">XWord</a></li>
+</ol>
