add base so domain isnt relative

--- a/projects.html
+++ b/projects.html
@@ -1,4 +1,4 @@
 <h1>Projects</h1>
 <ol>
-  <li><a href="x-word.gamolsky.net">XWord</a></li>
+  <li><a href="https://x-word.gamolsky.net">XWord</a></li>
 </ol>
