--- a/index.html
+++ b/index.html
@@ -1,2 +1,13 @@
-<h1>Hi! I'm Nikita</h1>
-<p>Head on over to <a href="projects.html">Projects</a></p>
+<html>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="output.css" rel="stylesheet" />
+  </head>
+  <body class="dark:bg-slate-900">
+    <h1 class="text-3xl dark:text-white m-4">Hi! I'm Nikita</h1>
+    <p class="dark:text-white ml-4">
+      Head on over to <a class="underline" href="projects.html">Projects</a>
+    </p>
+  </body>
+</html>
