--- a/index.html
+++ b/index.html
@@ -3,11 +3,16 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="output.css" rel="stylesheet" />
+    <link rel="icon" type="image/svg+xml" href="favicon.svg" />
+    <title>Nikita Gamolsky</title>
   </head>
-  <body class="dark:bg-slate-900">
-    <h1 class="text-3xl dark:text-white m-4">Hi! I'm Nikita</h1>
-    <p class="dark:text-white ml-4">
-      Head on over to <a class="underline" href="projects.html">Projects</a>
-    </p>
+  <body class="dark:bg-slate-900 dark:text-white">
+    <div></div>
+    <div class="m-4">
+      <h1 class="text-3xl">Hi! I'm Nikita</h1>
+      <p>
+        Head on over to <a class="underline" href="projects.html">Projects</a>
+      </p>
+    </div>
   </body>
 </html>
