--- a/index.html
+++ b/index.html
@@ -6,10 +6,46 @@
     <link rel="icon" type="image/svg+xml" href="favicon.svg" />
     <title>Nikita Gamolsky</title>
   </head>
-  <body class="dark:bg-slate-900 dark:text-white">
-    <div></div>
-    <div class="m-4">
-      <h1 class="text-3xl">Hi! I'm Nikita</h1>
+  <body class="dark:bg-slate-900 dark:text-white font-sans">
+    <header class="p-4 shadow-sm shadow-slate-500">
+      <div class="container mx-auto flex justify-between">
+        <h1 class="text-3xl inline">
+          <span class="m-2">👋 </span>Hi! I'm Nikita.
+        </h1>
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          class="inline my-auto"
+          fill="none"
+          viewBox="0 0 24 24"
+          stroke="currentColor"
+          width="24"
+          height="24"
+        >
+          <path
+            strokeLinecap="round"
+            strokeLinejoin="round"
+            strokeWidth="{2}"
+            d="M4 6h16M4 12h16M4 18h16"
+          />
+        </svg>
+      </div>
+    </header>
+    <div class="container mx-auto px-4 mt-8">
+      <p>
+        A creative problem solver and experienced software engineer dedicated to
+        aligning my work with the mission of **** (something about bettering
+        communities)?
+      </p>
+      <p class="mt-4">Specific interests include:</p>
+      <ul class="list-disc list-inside m-2">
+        <li>Fighting Climate Change</li>
+        <li>Improving the Quality of Education</li>
+      </ul>
+      <p>
+        I'm also passionate about puzzles and word games, and to that end have
+        been working on a collaborative crossword puzzle game. Head over to the
+        Projects page to check that out and other projects I've been working on.
+      </p>
       <p>
         Head on over to <a class="underline" href="projects.html">Projects</a>
       </p>
