keep working on homepage style

--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
       </div>
     </header>
     <div class="container mx-auto px-4 mt-8">
-      <p>
+      <h2 class="text-2xl">Who am I?</h2>
+      <p class="mt-4">
         A creative problem solver and experienced software engineer dedicated to
         aligning my work with the mission of **** (something about bettering
         communities)?
